--- a/about.html
+++ b/about.html
@@ -22,8 +22,7 @@
 
     <main>
         <h3> Hey y'all, I'm James</h3>
-        <p>I just attend college during the day, and read at night. 
-            I do speech and debate too.
+        <p>College student during the day, speech and debate competitor at night, and in-between an undergraduate researcher. 
             *finger guns*
         </p>
     </main>
